2008-06-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: set back working directory after the
	user comes back from the shell.  (closes: #534784, patch by packz).

2008-06-12  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.24.modules: Changed the clutter modules to use 
	trunk, because 0.7/0.8 will soon be API/ABI stable. Added -0.6 versions 
	of all the clutter modules in case anyone still needs them.

2008-06-08  Frederic Peters  <fpeters@0d.be>

	* scripts/hg-update.py: don't fail on parentless revisions.
	(closes: #536964, initial patch by John Spray)

2008-06-04  James Sharpe <jsharpe@svn.gnome.org>

	* jhbuild/versioncontrol/git.py: Added fallback to git-svn
	show-externals for when unhandled.log doesn't exist.
	
2008-06-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: removed occurence of locale.
	getpreferredencoding() that fails on Mac OS X.
	* jhbuild/main.py: added convenience uencode() function.

2008-06-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: fixed print of unencoded characters to
	console, when reporting conflicts after a checkout.

2008-06-03  James Sharpe <jsharpe@svn.gnome.org>

	* jhbuild/versioncontrol/git.py: Fixed _get_externals to handle
	deleted svn:externals correctly.
	
2008-06-03  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.22.modules: libgnomeui branched for 2.22.

2008-06-02  Luis Medinas  <lmedinas@svn.gnome.org>

	* modulesets/gnome-2.24.modules: Remove n-c-b dependecy
	from Brasero.

2008-06-02  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-2.24.modules: Clutter Vala bindings have
	been branched for the 0.6 cycle.

2008-05-31  Baptiste Mille-Mathas  <baptiste.millemathias@gmail.com>

	* modulesets/gnome-suites-2.24.modules:
	Add dbus-glib as dependency for GConf (Closes #535857)

2008-05-31  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: put JHBuild path to manpages in MANPATH