@@ -1,3 +1,10 @@
+2008-06-15  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/config.py, jhbuild/utils/cmds.py: adds a get_stderr parameter
+	to get_output, so it is possible to disable getting stderr output.  Use
+	this parameter when getting the Python version number, used to set
+	PYTHONPATH.  (closes again: #136983)
+
 2008-06-14  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/frontends/terminal.py: set back working directory after the
